Added html and game js after adding reset

--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@
 <h1>The Hangman</h1>
 <p>Press any key to continue</p>
 
-
-<br>
-        Wins: <input type="text" id="wins" value=""><br>
+ 
+       <!-- Wins: <input type="text" id="wins" value=""><br>
         userGuessed: <input type="text" id="userGuessed" value=""><br>
         numberOfGuessesRemaining: <input type="text" id="numberOfGuessesRemaining" value=""><br>
         lettersAlreadyGuessed: <input type="text" id="lettersAlreadyGuessed" value=""><br>
         computerChoice: <input type="text" id="computerChoice" value=""><br>
-        ComputerPicked: <input type="text" id="ComputerPicked" value=""><br>
+        ComputerPicked: <input type="text" id="ComputerPicked" value=""><br>-->
+
+
 
 
 </body>
