Hangman changes added

--- a/index.html
+++ b/index.html
@@ -9,16 +9,54 @@
 
 <body  onload="addParts();">
 
-<div class="container-fluid">
-<div class="jumbotron">
-<h1>The Hangman</h1>
+<div class="container">
+    <div class="jumbotron text-center">
+        <h1> The Hangman </h1>
+    </div>
+<div class="row">
+      <div class="col-md-12 panel text-center">
+      <p class="myText">Press Any key to Continue!</p>
+      </div>
+</div>
+<div class="row">
+
+    <div class="col-md-2 panel" id="wins">
+                <h2>Wins:</h2>
+    </div>
+
+    <div class="col-md-6 col-md-offset-1 panel" id="letters_guessed">
+            <h2>Letters Guessed:</h2>
+    </div>
+
+    <div class="col-md-2 col-md-offset-1 panel" id="losses">
+        <h2>Losses:</h2>
+    </div>
 
 </div>
+
+
+<div class="row">
+    <div class="col-md-5 jumbotron" id="current_word">
+        <h2> Current Word: </h2>
+    </div>
+    <div class="col-md-5 jumbotron col-md-offset-2" id="numberOfGuessesRemaining">
+        <h2> Guesses Remaining: </h2>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-md-12 jumbotron text-center">
+        <canvas id="hangmanDrawing" width="400" height="400"></canvas>
+    </div>
+</div>
+</div>
+
+<!--
 <p>Press any key to continue</p>
-<div id="Hangman">
 
 
-
+    <div id="Hangman">
+    
 		<p>You chose:</p>
 		<p>Wins:</p>
         <p>userGuessed: </p>
@@ -26,12 +64,11 @@
         <p>Curren Word: </p>
         <p>lettersAlreadyGuessed:</p>
        
+    </div>
 
-
-</div>
-
-<img src="assets/images/hangman.jpg" class="img-thumbnail pull-left img-responsive">
-<canvas id="hangmanDrawing" width="400" height="400"></canvas>
+    <div id="currentWord">
+        <p>Curren Word: </p>
+    </div>-->
 </div>
 </body>
 </html>
