--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <div class="container">
     <div class="jumbotron text-center">
-        <h1> The Hangman </h1>
+        <h1> Around the World with HangMan!! </h1>
     </div>
 <div class="row">
       <div class="col-md-12 panel text-center">
