Final Hangman commit

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 </head>
 
-<body  onload="addParts();">
+<body  onload="reset();">
 
 <div class="container">
     <div class="jumbotron text-center">
@@ -51,24 +51,6 @@
 </div>
 </div>
 
-<!--
-<p>Press any key to continue</p>
-
-
-    <div id="Hangman">
-    
-		<p>You chose:</p>
-		<p>Wins:</p>
-        <p>userGuessed: </p>
-        <p>numberOfGuessesRemaining: </p>
-        <p>Curren Word: </p>
-        <p>lettersAlreadyGuessed:</p>
-       
-    </div>
-
-    <div id="currentWord">
-        <p>Curren Word: </p>
-    </div>-->
 </div>
 </body>
 </html>
